--- a/EduDirect/Base.lproj/Main.storyboard
+++ b/EduDirect/Base.lproj/Main.storyboard
@@ -376,7 +376,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Jcb-8m-o9c" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2837.5999999999999" y="-439.43028485757122"/>
+            <point key="canvasLocation" x="3017" y="-439"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="1By-Da-XpI">
@@ -603,8 +603,8 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
+        <segue reference="UlG-hd-3iy"/>
         <segue reference="INU-4y-hJu"/>
-        <segue reference="IJb-vM-eHU"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.21626314616509679" green="1" blue="0.34989347377968139" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
 </document>
