--- a/EduDirect/Base.lproj/Main.storyboard
+++ b/EduDirect/Base.lproj/Main.storyboard
@@ -299,18 +299,33 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2A8-Pg-K06">
                                         <rect key="frame" x="40" y="13" width="30" height="30"/>
                                         <state key="normal" title="9th"/>
+                                        <connections>
+                                            <action selector="pressGradeButton:" destination="PC9-Hq-yBx" eventType="touchUpInside" id="Vjm-9r-k00"/>
+                                        </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cCQ-59-Y8j">
+                                    <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cCQ-59-Y8j">
                                         <rect key="frame" x="252" y="13" width="30" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="30" id="JdI-S3-7mp"/>
+                                        </constraints>
                                         <state key="normal" title="11th"/>
+                                        <connections>
+                                            <action selector="pressGradeButton:" destination="PC9-Hq-yBx" eventType="touchUpInside" id="fvT-p6-oRM"/>
+                                        </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZI0-Ci-aUi">
+                                    <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZI0-Ci-aUi">
                                         <rect key="frame" x="344" y="13" width="30" height="30"/>
                                         <state key="normal" title="12th"/>
+                                        <connections>
+                                            <action selector="pressGradeButton:" destination="PC9-Hq-yBx" eventType="touchUpInside" id="cmp-e4-weD"/>
+                                        </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ols-QS-hYT">
+                                    <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ols-QS-hYT">
                                         <rect key="frame" x="132" y="13" width="30" height="30"/>
                                         <state key="normal" title="10th"/>
+                                        <connections>
+                                            <action selector="pressGradeButton:" destination="PC9-Hq-yBx" eventType="touchUpInside" id="jL5-eO-6WZ"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.12941176469999999" green="0.75294117650000003" blue="0.3921568627" alpha="1" colorSpace="calibratedRGB"/>
@@ -961,18 +976,30 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YpW-Rl-IQJ">
                                         <rect key="frame" x="40" y="13" width="30" height="30"/>
                                         <state key="normal" title="9th"/>
+                                        <connections>
+                                            <action selector="pressGradeButton:" destination="hFL-ln-L5k" eventType="touchUpInside" id="P4b-yd-GHg"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gjC-Zz-3tW">
                                         <rect key="frame" x="252" y="13" width="30" height="30"/>
                                         <state key="normal" title="11th"/>
+                                        <connections>
+                                            <action selector="pressGradeButton:" destination="hFL-ln-L5k" eventType="touchUpInside" id="SUI-gt-Ykc"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iUO-A5-fWe">
                                         <rect key="frame" x="344" y="13" width="30" height="30"/>
                                         <state key="normal" title="12th"/>
+                                        <connections>
+                                            <action selector="pressGradeButton:" destination="hFL-ln-L5k" eventType="touchUpInside" id="QX8-eS-yQv"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CZw-Km-MzZ">
                                         <rect key="frame" x="132" y="13" width="30" height="30"/>
                                         <state key="normal" title="10th"/>
+                                        <connections>
+                                            <action selector="pressGradeButton:" destination="hFL-ln-L5k" eventType="touchUpInside" id="vIf-RO-ebF"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.12941176469999999" green="0.75294117650000003" blue="0.3921568627" alpha="1" colorSpace="calibratedRGB"/>
